Fix footer overlap

--- a/src/_app.scss
+++ b/src/_app.scss
@@ -8,7 +8,7 @@
   main {
     min-height: 100vh;
     margin-top: 72px;
-    margin-bottom: -50px;
+    margin-bottom: -$spacing-s;
     @media #{$mq-xsmall} {
       margin-top: 65px;
     }
