--- a/src/plotSearchAndCompetitionsPage/components/_mapComponent.scss
+++ b/src/plotSearchAndCompetitionsPage/components/_mapComponent.scss
@@ -1,4 +1,10 @@
 .mapComponent {
   height: 100vh;
   z-index: 10;
+
+  .leaflet-control-container {
+    .leaflet-bottom {
+      margin-bottom: $spacing-s;
+    }
+  }
 }
